fixed content overflow issue, still overflows in width if there string 35chars or longer

--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body{background-color: #efefef; font-family:Arial,Helvetica,sans-serif;color:#46
 .leftcolumn{float:left;}
 .rightcolumn{float:right;}
 
-#popularitems{width:330px;height:170px;float:left; padding-top: 10px; padding-right: 15px;}
-#newitems{width:330px;height:170px;float:left; padding-top: 10px; padding-right: 15px;}
-#goals{width:264px;height:170px;float:left; padding-top: 10px;}
+#popularitems{width:330px;float:left; padding-top: 10px; padding-right: 15px;}
+#newitems{width:330px;float:left; padding-top: 10px; padding-right: 15px;}
+#goals{width:264px;float:left; padding-top: 10px;}
 #about{width:615px;float:left; padding-top: 10px; padding-right: 15px;}
-#facebook{width:324px;height:170px;float:left; padding-top: 10px;}
+#facebook{width:324px;float:left; padding-top: 10px;}
